# pandoc-vimwiki

./: .gitignore  ChangeLog.md  LICENSE  pandoc-vimwiki.cabal  readme.md
src/: Main.hs
tests/: main.wiki  sub1.wiki  sub2.wiki  sub3.wiki
