name:                pandoc-vimwiki
version:             0.2.0.1
synopsis:            Pandoc filter to support vimwiki-special markup
description:         Converts checkboxes, transclusions and links
license:             MIT
license-file:        LICENSE
author:              Lars Krueger
maintainer:          lars_e_krueger@gmx.de
copyright:           (c) 2017 Lars Krueger
homepage:            https://github.com/LarsEKrueger/pandoc-vimwiki
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, readme.md
cabal-version:       >=1.10

source-repository this
  type:     git
  location: https://github.com/LarsEKrueger/pandoc-vimwiki.git
  tag: v_0.2.0.1

executable pandoc-vimwiki
  main-is:             Main.hs
  build-depends:       base >=4 && <5,
                       pandoc-types == 1.22.*,
                       bytestring == 0.10.*,
                       aeson == 1.5.*,
                       pandoc >= 2.11,
                       text == 1.2.*,
                       containers >= 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
